--- a/templates/encrypted-configuration/encrypted.twig
+++ b/templates/encrypted-configuration/encrypted.twig
@@ -19,11 +19,13 @@
 
     <div class="details-box">
         <ul class="mbn">
-            <li>Application</li>
-            <li>{{ application.name }}</li>
-
-            <li>Environment</li>
             <li>
+                <h6>Application</h6>
+                {{ application.name }}
+            </li>
+
+            <li>
+                <h6>Environment</h6>
                 {% if encrypted.environment %}
                     {{ encrypted.environment.name }}
                 {% else %}
