Clean up help templates

--- a/templates/latest-release.twig
+++ b/templates/latest-release.twig
@@ -15,7 +15,7 @@
         <li><a href="http://git/hal/hal/releases">GitHub release notes</a></li>
         <li>
             Hal release notes
-            {% include 'help/partial.release-history.twig' %}
+            {% include 'help/partial.release_notes_history.twig' %}
         </li>
     </ul>
 
