Clean up single quotes and isolate macros in their own twig

--- a/templates/application/application.permission.add.twig
+++ b/templates/application/application.permission.add.twig
@@ -1,8 +1,8 @@
 {% extends 'base.twig' %}
-{% import "macros.twig" as macros %}
-{% import "macros.git.twig" as git_macros %}
-{% import "macros.form.twig" as form_macros %}
-{% set js_components = ["app.permissions.multi"] %}
+{% import 'macros.twig' as macros %}
+{% import 'macros.git.twig' as git_macros %}
+{% import 'macros.form.twig' as form_macros %}
+{% set js_components = ['app.permissions.multi'] %}
 
 {% set page_title = 'Grant Application Permissions : ' ~ application.name %}
 
