--- a/templates/application/application.permission.remove.twig
+++ b/templates/application/application.permission.remove.twig
@@ -1,7 +1,7 @@
 {% extends 'base.twig' %}
-{% import "macros.twig" as macros %}
-{% import "macros.git.twig" as git_macros %}
-{% import "macros.form.twig" as form_macros %}
+{% import 'macros.twig' as macros %}
+{% import 'macros.git.twig' as git_macros %}
+{% import 'macros.form.twig' as form_macros %}
 
 {% set page_title = 'Manage Application Permissions : ' ~ application.name %}
 
