--- a/templates/application/dashboard.twig
+++ b/templates/application/dashboard.twig
@@ -1,7 +1,7 @@
 {% extends 'base.twig' %}
-{% import "macros.twig" as macros %}
-{% import _self as page_macros %}
-{% set js_components = ["status"] %}
+{% import 'macros.twig' as macros %}
+{% import 'application/macros.twig' as app_macros %}
+{% set js_components = ['status'] %}
 
 {% set page_title = "Status : " ~ application.name %}
 
@@ -28,7 +28,7 @@
 
     <h2>Recent Builds</h2>
     {% set is_pushable = deployment_statuses|length > 0 and current_authorizations.canDeploy(application, selected_environment) %}
-    {% include '_partial-job/build-table.twig' with {'builds': builds, 'is_pushable': is_pushable, 'current_authorizations': current_authorizations } %}
+    {% include 'partial.build_table.twig' with {'builds': builds, 'is_pushable': is_pushable, 'current_authorizations': current_authorizations } %}
 
     {{ block('page_buttons') }}
 
@@ -59,7 +59,7 @@
         <div>
             <ul class="list--bare cards">
                 {% for status in deployment_statuses %}
-                    <li data-deploy="{{ status.target.id }}">{{ page_macros.pushCard(application, status.target, status.latest) }}</li>
+                    <li data-deploy="{{ status.target.id }}">{{ app_macros.pushCard(application, status.target, status.latest) }}</li>
                 {% endfor %}
             </ul>
         </div>
@@ -80,79 +80,3 @@
         <li><a class="btn" href="{{ uriFor('application', {'application': application.id}) }}">Manage Application</a></li>
     </ul>
 {% endblock %}
-
-{% macro pushCard(application, target, active) %}
-    {% import 'macros.twig' as macros %}
-    {% import 'macros.git.twig' as git_macros %}
-
-    <article class="card">
-        <header class="card__header">
-            <h4>
-                <a href="{{ uriFor('group', {'group': target.group.id}) }}">{{ target.format }}</a>
-
-                {% if target.url %}
-                    <a class="icon--link" href="{{ target.url }}">
-                        {{ macros.icon('outgoing') }}
-                    </a>
-                {% endif %}
-
-                {% if active %}
-                    <a class="rollback icon--link" href="{{ uriFor('rollback.page1', {'application': application.id, 'target': target.id}) }}" title="View push history or rollback to a successful build">
-                        {{ macros.icon('revert') }}
-                    </a>
-                {% endif %}
-            </h4>
-        </header>
-
-        <section class="card__details">
-            <ul>
-                {# push details #}
-                <li>
-                    <span>Last Release:</span>
-                    {% if active %}
-                        {{ macros.job_status(active, true) }}
-                        (<a href="{{ uriFor('release', {'release': active.id}) }}">{{ active.id|formatPushId }}</a>)
-                    {% else %}
-                        None
-                    {% endif %}
-                </li>
-                <li>
-                    <span>Released on:</span>
-                    {% if active.created %}
-                        {{ active.created|html5date }}
-                    {% else %}
-                        Never
-                    {% endif %}
-                </li>
-
-                {# build details #}
-                <li>
-                    <span>Build:</span>
-                    {% if active %}
-                        <a href="{{ uriFor('build', {'build': active.build.id}) }}">{{ active.build.id|formatBuildId }}</a>
-                    {% else %}
-                        Unknown
-                    {% endif %}
-                </li>
-                <li>
-                    <span>Reference:</span>
-                    {% if active %}
-                        {% set isCurrent = githubCommitIsCurrent(application.github.owner, application.github.repository, active.build.reference, active.build.commit) %}
-                        {{ git_macros.gitref(active.build, true, isCurrent, true) }}
-
-                    {% else %}
-                        Unknown
-                    {% endif %}
-                </li>
-                <li>
-                    <span>Commit:</span>
-                    {% if active %}
-                        {{ git_macros.gitcommit(active.build) }}
-                    {% else %}
-                        Unknown
-                    {% endif %}
-                </li>
-            </ul>
-        </section>
-    </article>
-{% endmacro %}
