--- a/templates/credentials/credentials.twig
+++ b/templates/credentials/credentials.twig
@@ -1,7 +1,7 @@
 {% extends 'base.twig' %}
 {% import 'macros.twig' as macros %}
 
-{% set page_title = "Credentials" %}
+{% set page_title = 'Credentials' %}
 
 {% set is_admin = current_authorizations.isSuper() %}
 
