--- a/templates/denied.twig
+++ b/templates/denied.twig
@@ -1,6 +1,6 @@
 {% extends 'base.twig' %}
 
-{% set page_title = "Access Denied" %}
+{% set page_title = 'Access Denied' %}
 {% set html_id = 'error-page' %}
 
 {# remove nav #}
