--- a/templates/encrypted-configuration/encrypted.configuration.twig
+++ b/templates/encrypted-configuration/encrypted.configuration.twig
@@ -1,5 +1,5 @@
 {% extends 'base.twig' %}
-{% import "macros.twig" as macros %}
+{% import 'macros.twig' as macros %}
 
 {% set page_title = 'Encrypted Configuration : ' ~ application.name %}
 
