--- a/templates/environment/add_environment.twig
+++ b/templates/environment/add_environment.twig
@@ -1,5 +1,5 @@
 {% extends 'base.twig' %}
-{% import "macros.form.twig" as form_macros %}
+{% import 'macros.form.twig' as form_macros %}
 
 {% set page_title = 'Add Environment' %}
 
