--- a/templates/environment/environments.twig
+++ b/templates/environment/environments.twig
@@ -1,7 +1,7 @@
 {% extends 'base.twig' %}
-{% import "macros.twig" as macros %}
+{% import 'macros.twig' as macros %}
 
-{% set page_title = "Environments" %}
+{% set page_title = 'Environments' %}
 
 {% set is_admin = current_authorizations.isSuper() %}
 
