--- a/templates/group/groups.twig
+++ b/templates/group/groups.twig
@@ -1,6 +1,6 @@
 {% extends 'base.twig' %}
 
-{% set page_title = "Groups" %}
+{% set page_title = 'Groups' %}
 
 {% block content %}
     <h1>{{ page_title }}</h1>
