--- a/templates/partial.build_table.twig
+++ b/templates/partial.build_table.twig
@@ -1,5 +1,5 @@
-{% import "macros.twig" as macros %}
-{% import "macros.git.twig" as git_macros %}
+{% import 'macros.twig' as macros %}
+{% import 'macros.git.twig' as git_macros %}
 
 <table class="table--spacing-medium">
     <thead>
