--- a/templates/partial.event_table.twig
+++ b/templates/partial.event_table.twig
@@ -1,4 +1,4 @@
-{% import "macros.twig" as macros %}
+{% import 'macros.twig' as macros %}
 
 {# expected context = logs, canLoad #}
 <table class="js-event-logs table--spacing-medium table--bodied">
