--- a/templates/permissions/permission.remove.twig
+++ b/templates/permissions/permission.remove.twig
@@ -1,7 +1,7 @@
 {% extends 'base.twig' %}
-{% import "macros.twig" as macros %}
+{% import 'macros.twig' as macros %}
 
-{% set page_title = "Remove Permissions" %}
+{% set page_title = 'Remove Permissions' %}
 
 {% block content %}
 
