--- a/templates/release/rollback.twig
+++ b/templates/release/rollback.twig
@@ -3,7 +3,7 @@
 {% import 'macros.git.twig' as git_macros %}
 {% import 'macros.pagination.twig' as pagination %}
 
-{% set page_title = "Release History : " ~ application.name %}
+{% set page_title = 'Release History : ' ~ application.name %}
 
 {% block content %}
 
