--- a/templates/release/select_deploy_environment.twig
+++ b/templates/release/select_deploy_environment.twig
@@ -2,9 +2,9 @@
 {% import 'macros.twig' as macros %}
 {% import 'macros.git.twig' as git_macros %}
 
-{% set js_components = ["push.start"] %}
+{% set js_components = ['push.start'] %}
 
-{% set page_title = "Select Deployment Environment : " ~ build.id %}
+{% set page_title = 'Select Deployment Environment : ' ~ build.id %}
 
 {% block content %}
     <div class="nav--page">
