--- a/templates/user/github.token.remove.twig
+++ b/templates/user/github.token.remove.twig
@@ -1,6 +1,6 @@
 {% extends 'base.twig' %}
 
-{% set page_title = "Remove GitHub Authorization" %}
+{% set page_title = 'Remove GitHub Authorization' %}
 
 {% block content %}
     <h2>{{ page_title }}</h2>
