--- a/templates/user/users.twig
+++ b/templates/user/users.twig
@@ -1,5 +1,5 @@
 {% extends 'base.twig' %}
-{% import "macros.twig" as macros %}
+{% import 'macros.twig' as macros %}
 {% import 'macros.pagination.twig' as pagination %}
 
 {% set page_title = 'Users' %}
