--- a/templates/latest-release.twig
+++ b/templates/latest-release.twig
@@ -1,5 +1,5 @@
 {% extends 'base.twig' %}
-{% import "macros.twig" as macros %}
+{% import 'macros.twig' as macros %}
 
 {% set page_title = 'Latest Release' %}
 
