--- a/templates/permissions/permission.add.twig
+++ b/templates/permissions/permission.add.twig
@@ -1,8 +1,8 @@
 {% extends 'base.twig' %}
-{% import "macros.twig" as macros %}
-{% import "macros.form.twig" as form_macros %}
+{% import 'macros.twig' as macros %}
+{% import 'macros.form.twig' as form_macros %}
 
-{% set page_title = "Add Permissions" %}
+{% set page_title = 'Add Permissions' %}
 
 {% block content %}
 
