--- a/templates/user/user.twig
+++ b/templates/user/user.twig
@@ -61,7 +61,7 @@
     </div>
 
     <h2>Authorizations</h2>
-    {% include 'user/partial.user-status.twig' with {
+    {% include 'partial.user_permissions.twig' with {
         user: user,
         authorizations: user_authorizations,
         permissions: user_permissions
