Organize paged endpoints and pages
- Centralize where page sizes are stored
- Add Queue namespace for queue pages
- Put Build/Release history pages and endpoints under queue namespace

--- a/templates/queue/builds_history.twig
+++ b/templates/queue/builds_history.twig
@@ -12,15 +12,15 @@
 
         <p class="nav--page__back">
             <a class="btn btn--small btn--back" href="{{ uriFor('queue.history.page1') }}">Queue History</a>
-            <a class="btn btn--small btn--back" href="{{ uriFor('releases.list.page1') }}">All Releases</a>
+            <a class="btn btn--small btn--back" href="{{ uriFor('releases.history.page1') }}">All Releases</a>
         </p>
     </div>
 
-    {{ pagination.pagination(page, last, 'builds.list') }}
+    {{ pagination.pagination(page, last, 'builds.history') }}
 
     {{ block('builds') }}
 
-    {{ pagination.pagination(page, last, 'builds.list') }}
+    {{ pagination.pagination(page, last, 'builds.history') }}
 
 {% endblock %}
 
