Move super admin pages into normal admin namespace and urls

--- a/templates/admin/dashboard.twig
+++ b/templates/admin/dashboard.twig
@@ -58,9 +58,9 @@
     {% if is_admin %}
         <h2 class="leader">Manage Hal System</h2>
         <ul>
-            <li><a href="{{ uriFor('super.system') }}" class="btn">System Dashboard</a></li>
-            <li><a href="{{ uriFor('super.caches') }}" class="btn">Cache Management</a></li>
-            <li><a href="{{ uriFor('super.banner') }}" class="btn">Global Banner</a></li>
+            <li><a href="{{ uriFor('admin.system_dashboard') }}" class="btn">System Dashboard</a></li>
+            <li><a href="{{ uriFor('admin.cache_management') }}" class="btn">Cache Management</a></li>
+            <li><a href="{{ uriFor('admin.global_banner') }}" class="btn">Global Banner</a></li>
         </ul>
 
         <h3>Server Information</h3>
