Rewrite js modules to es6 without default exports

--- a/templates/application/add_permission.twig
+++ b/templates/application/add_permission.twig
@@ -2,7 +2,7 @@
 {% import 'macros.twig' as macros %}
 {% import 'macros.git.twig' as git_macros %}
 {% import 'macros.form.twig' as form_macros %}
-{% set js_components = ['app.permissions.multi'] %}
+{% set js_components = ['application_permissions'] %}
 
 {% set page_title = 'Grant Application Permissions : ' ~ application.name %}
 
