--- a/templates/application/applications.twig
+++ b/templates/application/applications.twig
@@ -1,7 +1,7 @@
 {% extends 'base.twig' %}
 {% import 'macros.twig' as macros %}
 {% import 'application/macros.applications.twig' as apps_macros %}
-{% set js_components = ['applications.list'] %}
+{% set js_components = ['applications_list'] %}
 
 {% set page_title = 'Applications' %}
 
