--- a/templates/credentials/edit_credential.twig
+++ b/templates/credentials/edit_credential.twig
@@ -1,8 +1,7 @@
 {% extends 'base.twig' %}
 {% import 'macros.form.twig' as form_macros %}
 
-{% set js_components = ['credential.add'] %}
-
+{% set js_components = ['add_credential_form'] %}
 {% set page_title = 'Edit Credential' %}
 
 {% block content %}
