--- a/templates/dashboard.twig
+++ b/templates/dashboard.twig
@@ -1,6 +1,6 @@
 {% extends 'base.twig' %}
 {% import 'macros.twig' as macros %}
-{% set js_components = ['queue'] %}
+{% set js_components = ['job_queue'] %}
 
 {% set page_title = 'Dashboard' %}
 
