--- a/templates/queue/builds_history.twig
+++ b/templates/queue/builds_history.twig
@@ -2,7 +2,7 @@
 {% import 'macros.pagination.twig' as pagination %}
 {% import 'macros.git.twig' as git %}
 {% import 'macros.twig' as macros %}
-{% set js_components = ["job.updater"] %}
+{% set js_components = ['job_table_updater'] %}
 
 {% set page_title = "Build History" %}
 
