--- a/templates/queue/queue.twig
+++ b/templates/queue/queue.twig
@@ -1,6 +1,6 @@
 {% extends 'base.twig' %}
 
-{% set js_components = ['queue'] %}
+{% set js_components = ['job_queue'] %}
 {% set page_title = 'Queue' %}
 
 {% block content %}
