--- a/templates/queue/queue_history.twig
+++ b/templates/queue/queue_history.twig
@@ -3,7 +3,7 @@
 {% import 'macros.pagination.twig' as pagination %}
 
 {% if is_today %}
-    {% set js_components = ['queue'] %}
+    {% set js_components = ['job_queue'] %}
 {% endif %}
 {% set page_title = 'Build and Release History' %}
 
