--- a/templates/queue/releases_history.twig
+++ b/templates/queue/releases_history.twig
@@ -1,9 +1,9 @@
 {% extends 'base.twig' %}
 {% import 'macros.pagination.twig' as pagination %}
 {% import 'macros.twig' as macros %}
-{% set js_components = ["job.updater"] %}
+{% set js_components = ['job_table_updater'] %}
 
-{% set page_title = "Release History" %}
+{% set page_title = 'Release History' %}
 
 {% block content %}
 
