--- a/templates/release/release.twig
+++ b/templates/release/release.twig
@@ -1,7 +1,7 @@
 {% extends 'base.twig' %}
 {% import 'macros.twig' as macros %}
 {% import 'macros.git.twig' as git_macros %}
-{% set js_components = ['push.info'] %}
+{% set js_components = ['release_info'] %}
 
 {% set page_title = 'Release : ' ~ release.application.name %}
 
