--- a/templates/release/releases.twig
+++ b/templates/release/releases.twig
@@ -1,6 +1,6 @@
 {% extends 'base.twig' %}
 {% import 'macros.pagination.twig' as pagination %}
-{% set js_components = ['job.updater'] %}
+{% set js_components = ['job_table_updater'] %}
 
 {% set page_title = 'Release History : ' ~ application.name %}
 
