--- a/templates/release/start_release.twig
+++ b/templates/release/start_release.twig
@@ -4,7 +4,7 @@
 {% import 'macros.form.twig' as form_macros %}
 {% import 'macros.start_deployment.twig' as deploy_macros %}
 
-{% set js_components = ['push.start'] %}
+{% set js_components = ['start_deployment'] %}
 
 {% set page_title = 'Start Release : ' ~ build.id %}
 
