--- a/templates/application/dashboard.twig
+++ b/templates/application/dashboard.twig
@@ -1,9 +1,9 @@
 {% extends 'base.twig' %}
 {% import 'macros.twig' as macros %}
 {% import 'application/macros.twig' as app_macros %}
-{% set js_components = ['status'] %}
+{% set js_components = ['application_dashboard'] %}
 
-{% set page_title = "Status : " ~ application.name %}
+{% set page_title = 'Status : ' ~ application.name %}
 
 {% set canUserBuild = current_authorizations.canBuild(application) %}
 {% set isBusinessTime = is_serious_business_mode %}
